--- a/exercise1.html
+++ b/exercise1.html
@@ -80,19 +80,14 @@
   background-color:rgb(248, 80, 37);
   opacity: 0.4;
 }
-
-
 </style>
 </head>
 <body>
-
-
 <div class="container">
-  <img src="galaxyY/THEME.png" alt="GALAXY" style="width:220%">
+  <img src="THEME.png" alt="GALAXY" style="width:220%">
   <button class="btn">Starters</button>
   <button class="btnM">Movers</button>
   <button class="btnF">Flyers</button>
 </div>
-
 </body>
 </html>
