--- a/exercise1.html
+++ b/exercise1.html
@@ -85,7 +85,8 @@
 <body>
 <div class="container">
   <img src="THEME.png" alt="GALAXY" style="width:220%">
-  <button class="btn">Starters</button>
+  <a href="file:///C:/Users/THU-COEX/Desktop/GALAXYFINNZ/Starters.html" target="_blank">
+    <button class="btn">Starters</button>
   <button class="btnM">Movers</button>
   <button class="btnF">Flyers</button>
 </div>
