--- a/exercise1.html
+++ b/exercise1.html
@@ -85,7 +85,7 @@
 <body>
 <div class="container">
   <img src="THEME.png" alt="GALAXY" style="width:220%">
-  <a href="Starters.html" target="_blank">
+  <a href="https://duocore93.github.io/GalaxyFinnZ/Starters.html" target="_blank">
     <button class="btn">Starters</button>
   <button class="btnM">Movers</button>
   <button class="btnF">Flyers</button>
